--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Complete Bootstrap 4 Website Layout</title>
+	<title>Developer's Portfolio</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -15,7 +15,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class= "navbar navbar-expand-md bg-light navbar-light sticky-top">
+<nav class= "navbar navbar-expand-md bg-dark navbar-dark sticky-top">
 	<div class="container-fluid ">
 		<a class="navbar-brand" href="index.html"><img src="img/logo1.png"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -45,7 +45,7 @@
 </nav>
 
 <!--- Image Slider -->
-<div id="slides" class="carousel slide" data-ride="carousel">
+<div id="slides" class="carousel slide carousel-fade" data-bs-ride="carousel">
 	<ul class="carousel-indicators">
 		<li data-target="#slides" data-slide-to="0" class="active"></li>
 		<li data-target="#slides" data-slide-to="1"></li>
@@ -77,11 +77,10 @@
 <div class="container-fluid">
 	<div class="row jumbotron">
 		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p class="lead">A web hosting service allows individulas A web hosting service allows individulas A web hosting service allows individulas A web hosting service allows individulas A web hosting service allows individulas</p>
-
+			<p class="lead"> Birla Institute of Technology & Science, Pilani (BITS Pilani) is a private deemed university in Pilani, India. It focuses primarily on higher education and research in engineering and sciences.</p>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">BPPC</button></a>
+			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg"><a href="https://www.bits-pilani.ac.in/">BPPC</a></button></a>
 
 		</div>
 	</div>
@@ -89,8 +88,7 @@
 </div>
 
 
-<!--- Welcome Section -->
-<div class="container-fluid padding">
+<!--- <div class="container-fluid padding">
 	<div class="row welcome text-centre">
 		<div class="col-12">
 			<h1 class="display-4"> BUILT WITH EASE</h1>
@@ -104,6 +102,7 @@
 
 	</div>
 </div>
+ -->
 
 <!--- Three Column Section -->
 
