--- a/skills.html
+++ b/skills.html
@@ -50,31 +50,51 @@
 			<i class="fab fa-html5"></i>
 			<h3>HTML5</h3>
 			<p>A web hosting service allows individulasA web hosting s</p>
+			
+			  <div class="progress">
+				<div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+			  </div>
 		</div>
 		<div class="col-xs-12 col-sm-6 col-md-4" >
 			<i class="fas fa-bold"></i>
 			<h3>BOOTSTRAP</h3>
 			<p>A web hosting service allows individulasA web hosting s</p>
+			<div class="progress">
+				<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+			  </div>
 		</div>
 		<div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fab fa-css3"></i>
 			<h3>CSS</h3>
 			<p>A web hosting service allows individulasA web hosting s</p>
+			
+			  <div class="progress">
+				<div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+			  </div>
 		</div>
         <div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fab fa-js"></i>
 			<h3>Java Script</h3>
 			<p>A web hosting service allows individulasA web hosting s</p>
+			<div class="progress">
+				<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+			  </div>
 		</div>
         <div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fab fa-react"></i>
 			<h3>ReactJS</h3>
 			<p>A web hosting service allows individulasA web hosting s</p>
+			<div class="progress">
+				<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+			  </div>
 		</div>
         <div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fas fa-code"></i>
 			<h3>C</h3>
 			<p>A web hosting service allows individulasA web hosting s</p>
+			<div class="progress">
+				<div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+			  </div>
 		</div>
 	</div>
 <hr class="my-4">
