made font and padding changes

--- a/about.html
+++ b/about.html
@@ -47,13 +47,13 @@
     <div class="about">
         <div class="container-fluid padding">
         <div class="row padding">
-            <div class="col-lg-7">
-                <h2 class="padding ">HI THERE</h2>
-                <p>My name is Kshitij Sanghi.</p>
-                <p>I just finished my first year at BITS, Pilani-EEE</p>
-                <p>I live in Mumbai</p>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <br>
+            <div class="col-lg-7 ">
+                   <h2 >HI THERE</h2>
+                    <p>My name is Kshitij Sanghi.</p>
+                    <p>I just finished my first year at BITS, Pilani-EEE</p>
+                    <p>I live in Mumbai</p>
+                    <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <br>
                 <!--<a href="#" class="btn btn-primary">LEARN MORE</a>-->
             </div>
             <div class="col-lg-5">
