--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
 <div class="container-fluid padding">
 <div class="row welcome text-centre">
     <div class="col-12">
-        <h1 class="display-4">MY PROJECTS</h1>
+        <h1 class="display-4" style="padding: 20px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">MY PROJECTS</h1>
     </div>
     <hr>
 </div>    
