--- a/skills.html
+++ b/skills.html
@@ -12,6 +12,7 @@
 	<link href="style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://m.w3newbie.com/you-tube.css">
 </head>
+
 <body>
 
 <!-- Navigation -->
@@ -99,9 +100,9 @@
 				  </div>
 			</div>
 		</div>
-	<hr class="my-4">
+	
 	</div>
 
 </div>
 
-
+</body>
