--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 	
 	<div class="container-fluid padding">
 		<div class="row padding">
-	<div class="col-8">
+	<div class="col-lg-8">
 		<div class="contact-clean">
 			<form onsubmit="return false;">
 				<h2 class="text-center">Write an Email </h2>
@@ -60,7 +60,7 @@
 		</div>
 	</div>    
 	
-	<div class="col-4">
+	<div class="col-lg-4">
 		<div class="social padding">
 			<p class="lead">Getting in touch is easy</p>
 			<br>
