--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class= "navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+<nav class= "navbar navbar-expand-md bg-light navbar-light sticky-top">
 	<div class="container-fluid ">
 		<a class="navbar-brand" href="index.html"><img src="img/logo1.png"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -57,8 +57,7 @@
 			<div class="carousel-caption">
 				<h1 class="display-2">BITS PILANI</h1>
 				<h3 >PILANI CAMPUS</h3>
-				<button type="button" class="btn btn-outline-light btn-lg">VIEW CAMPUS</button>
-				<button type="button" class="btn btn-primary btn-lg">VIEW ACADS</button>
+				
 
 			</div>
 		</div>
